--- a/src/Experiments/JupyterNotebooks_SyntheticExperiments/Ablation_Experiment.ipynb
+++ b/src/Experiments/JupyterNotebooks_SyntheticExperiments/Ablation_Experiment.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-04T12:52:59.473256Z",
-     "start_time": "2025-06-04T12:52:59.415034Z"
+     "end_time": "2025-06-04T13:58:08.306333Z",
+     "start_time": "2025-06-04T13:58:06.472149Z"
     }
    },
    "source": [
@@ -102,13 +102,13 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-04T12:53:08.512871Z",
-     "start_time": "2025-06-04T12:53:08.508760Z"
+     "end_time": "2025-06-04T13:58:09.296745Z",
+     "start_time": "2025-06-04T13:58:09.294126Z"
     }
    },
    "cell_type": "code",
@@ -123,13 +123,13 @@
    ],
    "id": "e88809bbb8fb277b",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-04T12:53:10.348232Z",
-     "start_time": "2025-06-04T12:53:10.339266Z"
+     "end_time": "2025-06-04T13:58:10.361909Z",
+     "start_time": "2025-06-04T13:58:10.356330Z"
     }
    },
    "cell_type": "code",
@@ -220,13 +220,13 @@
    ],
    "id": "5cebe406fdb93c7c",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-04T12:54:23.420842Z",
-     "start_time": "2025-06-04T12:53:13.154256Z"
+     "end_time": "2025-06-04T13:59:16.399147Z",
+     "start_time": "2025-06-04T13:58:13.720511Z"
     }
    },
    "cell_type": "code",
@@ -237,17 +237,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [01:10<00:00,  5.85s/it]\n"
+      "100%|██████████| 12/12 [01:02<00:00,  5.22s/it]\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-04T13:02:01.010059Z",
-     "start_time": "2025-06-04T12:54:23.430629Z"
+     "end_time": "2025-06-04T14:06:13.996605Z",
+     "start_time": "2025-06-04T13:59:16.408302Z"
     }
    },
    "cell_type": "code",
@@ -258,17 +258,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [07:37<00:00, 65.37s/it] \n"
+      "100%|██████████| 7/7 [06:57<00:00, 59.66s/it]\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-04T12:57:37.855074Z",
-     "start_time": "2025-06-03T11:54:30.000727Z"
+     "end_time": "2025-06-04T14:06:14.196868Z",
+     "start_time": "2025-06-04T14:06:14.005549Z"
     }
    },
    "cell_type": "code",
@@ -339,7 +339,7 @@
     "axes[1].grid(color=\"lightgray\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"imgs/AblationMinPts.pdf\", format=\"pdf\", bbox_inches=\"tight\", pad_inches=0)\n"
+    "plt.savefig(\"imgs/AblationMinPts\", format=\"png\", bbox_inches=\"tight\", pad_inches=0)\n"
    ],
    "id": "d51e51fcab67222b",
    "outputs": [
@@ -354,7 +354,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {},
